--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ body, html {
   nav li {
     opacity: 0;
     background-color: rgb(37, 37, 37, 0.7);
+    cursor: pointer;
   }
   
 
@@ -219,6 +220,7 @@ body, html {
       height: 600px;
       float: right;
       padding-top: 2em;
+      opacity: 0;
   }
 
   p {
@@ -247,7 +249,7 @@ body, html {
   }
   
   .contact .form .input-box {
-    width: 80%;
+    width: 80%; 
     cursor: pointer;
   }
   
@@ -322,6 +324,7 @@ body, html {
     animation: menu-items .6s forwards 1.4s ease-in-out;
   }
   
+  
   .show-menu li:nth-of-type(1) {
     background-image: url(images/bioPic2.jpg);
     background-size: cover;
@@ -345,6 +348,10 @@ body, html {
   }
   
   .topiary-text {
+    animation: appear 2s 1s forwards;
+  }
+  
+  .bio {
     animation: appear 2s 1s forwards;
   }
   
